Fixed footer alignment for mobile

--- a/css/crux.css
+++ b/css/crux.css
@@ -35,6 +35,8 @@ footer {
 .footer .social-links {
     position: absolute;
     right: 0;
+    margin-top: -16px;
+    padding-bottom: 16px;
 }
 
 .footer .copyright {
@@ -51,13 +53,14 @@ footer {
 @media (max-width: 992px){
     .footer {
         position: static;
-        text-align: left;
+        text-align: center;
         width: 100vw;
     }
 
     .footer .social-links {
         position: static;
         right: auto;
+        margin: 16px 0;
     }
 
     .footer .copyright {
